--- a/YogshalaAndroid/app/build.gradle
+++ b/YogshalaAndroid/app/build.gradle
@@ -27,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -42,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.5'
 }
