--- a/YogshalaAndroid/app/src/main/AndroidManifest.xml
+++ b/YogshalaAndroid/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Yogshala"
         tools:targetApi="31">
         <activity
+            android:name=".activity.IncomeReportActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.EditTransactionActivity"
             android:exported="false" />
         <activity
